--- a/projects/sharepoint/RELEASE_NOTES
+++ b/projects/sharepoint/RELEASE_NOTES
@@ -8,6 +8,155 @@ The following sections describe the release in detail and provide information th
 
 Web Site: http://code.google.com/p/google-enterprise-connector-sharepoint/
 
+
+Release 3.0.4, November 19, 2012
+===============================
+
+Introduction
+------------
+This is a maintenance release that improves quality without adding any
+new functionality. Users of previous releases are encouraged to
+upgrade. Users of previous releases should check the "Version
+Compatibility" section below for instructions on how to use existing
+data with this new release.
+
+Summary of Changes
+------------------
+For a summary of the new features, see the Guide to Release 3.0:
+
+http://www.google.com/support/enterprise/static/gsa/docs/admin/connector_30/sharepoint_guide/
+
+This release contains fixes for the following issues:
+
+--Issue 7503627 SharePoint connector generates 400 Bad Request error
+                messages in connector logs for linked sites with invalid
+                SharePoint URLs.
+
+--Issue 7417617 If a restored folder is deleted again, the connector will
+                not send delete feeds for the child items.
+
+--Issue 7417072 SharePoint connector does not send delete feeds for all the
+                documents from a deleted folder when the total number of
+                documents to be deleted is greater than batch hint.
+
+--Issue 7327268 SharePoint connector does not send delete feeds for moved
+                documents in some cases.
+
+--Issue 7261118 SharePoint connector is not indexing older documents inside
+                newer folders.
+
+--Issue 7039902 SharePoint connector does not detect user profile delete
+                operations.
+
+--Issue 7007575 SharePoint connector feeds user profiles as public
+                documents without any ACLs. The connector now sends an ACL
+                including the NT AUTHORITY\Authenticated Users group. You
+                need to add a separate AD groups connector instance to
+                resolve this group. The SharePoint connector will not do
+                any group lookup when crawling user profiles.
+
+--Issue 6513826: Add less verbose logging level for MBean messages.
+
+Version Compatibility
+---------------------
+This version works with Connector Manager version 3.0.4 and above. Versions
+lower than 3.0.4 of the Connector Manager will not work correctly with this
+version of the connector. Connectors with version 2.4.0 and above can be
+safely upgraded using the steps given below.
+
+This version works with Google Services for SharePoint 3.0.0 and above.
+Versions lower than 3.0.0 of Google Services for SharePoint will not work
+correctly with this version of the connector.
+
+Google strongly recommends reindexing your SharePoint content when
+upgrading to 3.0, due to changes in the ACL structures in the connector,
+feeds, and GSA index, and corresponding changes in user identity and group
+resolution in the authentication mechanisms.
+
+SharePoint local group resolution support with GSA 6.10.4.G.22 is limited
+to HTTP Based NTLM and Connector authentication. All authentication
+mechanisms work with GSA 6.12 and higher. Flex AuthZ support in the
+connector works only with GSA 6.14 and higher. ACL inheritance and Deny
+permission, and crawling user profiles for Expert Search work only with GSA
+7.0 and higher. All the other connector features will continue to work on
+GSA 7.0.14.G.84, 6.14.0.G.28, 6.12.0.G.30, and 6.10.4.G.22.
+
+Manually upgrade an existing connector and Google Services for SharePoint
+------------------------------------------------------------------------
+The steps to manually upgrade an existing connector or a Google Services for SharePoint can be found at http://code.google.com/p/google-enterprise-connector-sharepoint/wiki/ManualInstallation.
+
+Platform Support
+------------------
+The connector can be installed and run on both 32-bit and 64-bit Windows and Linux environments.
+
+Certified Against
+-------------------
+32-bit:
+-------
+Microsoft Windows Server 2003
+Enterprise Edition
+Intel(R) Xeon(R) CPU
+E5504 @ 2.00GHz, 2.00 GB of RAM
+
+Red Hat Linux 5 (32-bit)
+Intel(R) Xeon(R) CPU
+E5504 @ 2.00GHz, 2.00 GB of RAM
+
+64-bit:
+--------
+Microsoft Windows Server 2003
+Enterprise x64 Edition
+Intel(R) Xeon(R) CPU
+E5504 @ 2.00GHz, 2.00 GB of RAM
+
+Note: This release has been tested against blank form templates and sample form templates provided by Microsoft Office InfoPath 2007.
+
+GSA Support:
+---------------------
+This connector version has been certified against 6.10.4.G.22, 6.12.0.G.30,
+6.14.0.G.28, and 7.0.14.G.84.
+
+Known Issues/Limitations
+------------------------
+1) Issue 59: The following exception occurs intermittently on some machines where the local ports are not released properly after being used.
+java.net.BindException: Address already in use: JVM_Bind
+Workaround: Stop the connector and restart it after some time to avoid this issue. Also increase the # of available ports as described here:
+http://support.microsoft.com/default.aspx?scid=kb;en-us;196271
+
+2) Issue 6514006: Connector configuration is saved for invalid domain name when the authentication scheme for SharePoint site is NTLM and
+the credentials used are of a local machine user.
+
+3) In this release, following features are not supported on SharePoint versions prior to SP2007
+- Fix for issue#53 (Connector should support SharePoint farm )
+- Bulk Authorization by connector
+- ACL
+
+4) The "Kerberos KDC Hostname" field on connector configuration page is not localized
+
+5) Issue 6513766: Upgrade HTTPClient library and AXis to newer versions
+-- When SharePoint server is slow in serving content, Connector Manager gets java.lang.IOException when pulling content of a
+document. One observation is that this exception occurs whenever the
+"java.net.SocketException: No buffer space available (maximum connections reached?): JVM_Bind"
+occurs as reported in Issue 59
+
+Stacktrace seen in logs:
+java.io.IOException: Attempted read on closed stream.
+at org.apache.commons.httpclient.AutoCloseInputStream.isReadAllowed(AutoCloseInputStream.java:183)
+at org.apache.commons.httpclient.AutoCloseInputStream.read(AutoCloseInputStream.java:107)
+
+Impact: Document content cannot be fetched and hence not indexed whenever this problem is encountered
+Possible workaround:
+-- Ensure that the SharePoint server is fast enough for serving content
+-- Also please see the workaround mentioned in Issue 59
+
+6) Issue 6514004: jcifs classes are not initialized when connector is run on Linux 64-bit environment
+-- HttpClient-Modified library makes use of Jcifs for supporting NTLM V2. On Suse Linux 64-bit environment it has been observed that Jcifs classes like Type1Message are not initialized properly and hence connector configuration does not get saved.
+7) 5032165: SharePoint connector Alias mapping is not working for default.aspx pages.
+8) 5022878: When web-service time-out value is set to null, connector instance dis-appears from the admin console.
+9) 5003394: Tool tips on the SharePoint connector configuration UI should give more details for each field.
+10) When you remove a connector, it removes only the entries with the namespace URL which it was configured and not for all of it sub sites and so on.
+
+
 Release 3.0.0, October 17, 2012
 ===============================
 
